--- a/TextPad/TextPad.csproj
+++ b/TextPad/TextPad.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainForm.xaml.cs">
