--- a/TextPad/TextPad.csproj
+++ b/TextPad/TextPad.csproj
@@ -62,6 +62,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="CloseStream.cs" />
+    <Compile Include="NewStream.cs" />
+    <Compile Include="OpenStream.cs" />
+    <Compile Include="SaveStream.cs" />
     <Compile Include="ViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
