--- a/TextPad/TextPad.csproj
+++ b/TextPad/TextPad.csproj
@@ -8,12 +8,13 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>TextPad</RootNamespace>
     <AssemblyName>TextPad</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -66,6 +67,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="CloseStream.cs" />
+    <Compile Include="Document.cs" />
+    <Compile Include="ICloseStream.cs" />
+    <Compile Include="INewStream.cs" />
+    <Compile Include="IOpenStream.cs" />
+    <Compile Include="ISaveStream.cs" />
     <Compile Include="NewStream.cs" />
     <Compile Include="OpenStream.cs" />
     <Compile Include="SaveStream.cs" />
@@ -108,6 +114,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="TextPad.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{F2AD3317-3627-4D8C-80B8-7927E3381B9F}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
